# test

chainer_study/: intro.py  test_cupy.py  test_load_dataset_for_train_imagenet.py  test_variable_links.py
chainer_study/dcgan_trajectory/: train_dcgan_trajectory.py  trajectory_dataset.py
chainer_study/eus_cube_pose/: mean.npy  test_eus_cube_pose.py  train_eus_cube_pose.py  train_eus_cube_pose_util.py
chainer_study/gan_trajectory/: net.py  train_gan_trajectory.py  trajectory_dataset.py  visualize.py
chainer_study/imagenet/: mean_for_alex.npy  test_imagenet.py  test_load_dataset_for_train_imagenet.py
chainer_study/mnist_interactive/: train_mnist_interactive.py
choreonoid_ik/: .gitignore  CMakeLists.txt  README.md  package.xml
choreonoid_ik/env-hooks/: 99.choreonoid_ik_plugin.bash.in
choreonoid_ik/euslisp/: eus-choreonoid-converter.l  sample-ik.l
choreonoid_ik/euslisp/sample/: sample-eus-choreonoid-converter.l
choreonoid_ik/src/: EusChoreonoidConverter.cpp  SimpleBodyGenerator.cpp  SimpleBodyGenerator.h  sample_ik.cpp  sample_ik_plugin.cpp
clustering/: convex_clustering_estimation.py  generate_data_2d.py  gmm_estimation.py
control/rfu/: test-rfu.l  test-rfu.py
cuda/add/: README.md  add_block.cu  add_indexing.cu  add_thread.cu
cuda/eus_cuda_matrix/: CMakeLists.txt  README.md
cuda/eus_cuda_matrix/euslisp/: eus-cuda-matrix.l  test-matrixMul.l
cuda/eus_cuda_matrix/euslisp/misc/: compare-matrix-multiply.l
cuda/eus_cuda_matrix/euslisp/test/: test-matrixMul.l  test-matrixMulCUBLAS.l  test-matrixMulCUBULAS.l
cuda/eus_cuda_matrix/src/: matrixMul.cu  matrixMulCUBLAS.cu
cuda/separate_compilation/: README.md  particle.cpp  v3.cpp
cuda/separate_compilation/use_cmake/: CMakeLists.txt  README.md  main.cu  particle.h  v3.h
cuda/separate_compilation/use_makefile/: README.md
cuda/stencil/: stencil_shared.cu
eus/: plane-estimation-with-eigen.l  random-walk-graph-search.l
eus/cube-tracking/: test-cube-tracking.l
eus/dataset_cube_pose/: generate-dataset-for-cube-pose.l
eus/grasp_cone/: generate-grasp-cone-model.l  grasp_cone.urdf
eus/grasp_cone/meshes/: nil_link_mesh.dae
eus/particle-filter/: particle-filter.l
gazebo/gazebo_contact_tutorial/: ContactPlugin.cc  ContactPlugin.hh  contact.world
kdl/KinematicsTest/: CMakeLists.txt  root_ik_test.cpp  solvertest.cpp
ompl/BoxGrasplessManipulation/: 2DofRobotCircleConstraint.cpp  CMakeLists.txt
ompl/BoxGrasplessManipulation/scripts/: visualize_path.plt
ompl/CircleObjectManipulation/: CMakeLists.txt  CircleObjectManipulation.cpp  CircleObjectManipulationWithControl.cpp  CircleObjectPath.cpp
ompl/CircleObjectManipulation/CMakeModules/: ompl.pc
ompl/CircleObjectManipulation/scripts/: concat_gif_animation.bash  visualize_path.plt
opencv/camera/: Makefile  main.cpp
opengl/cube-texture/: Makefile  cube_texture.cpp
opt_benchmark/: CMakeLists.txt  README.md  package.xml
opt_benchmark/src/: eigen_lm.cpp  eigen_lm_ad.cpp  least_square_problem.h
optimization/: graph_visualization_sample.py  unconstrained_optimize_compare.py
pcl_study/ConcaveHullPolygon/: table_scene_mug_stereo_textured_hull.pcd
pcl_study/ExtractingIndicies/: extract_indices  extract_indices.cpp
pcl_study/FilteringPointCloud/: passthrough.cpp
pcl_study/ICP/: iterative_closest_point.cpp
pcl_study/KdTreeSearch/: CMakeLists.txt  kdtree_search.cpp
pcl_study/NormalEstimationUsingIntegralImages/: CMakeLists.txt  normal_estimation_using_integral_images.cpp  normal_estimation_using_integral_images.cpp~
pcl_study/PCLVisualizer/: pcl_visualizer_demo.cpp
pcl_study/PlaneModelSegmentation/: planar_segmentation.cpp  planar_segmentation.cpp~
pcl_study/RandomSampleConsensus/: random_sample_consensus.cpp  random_sample_consensus.cpp~
pcl_study/RegistratoinTest/: CMakeLists.txt  registration_test.cpp  transformation_estimation_point_to_line.h
pcl_study/RegistratoinTest/pcd/: cube.pcd
pcl_study/RobustPoseEstimation/: alignment_prerejective.cpp  alignment_prerejective.cpp~
pcl_study/SIFTKeypoint/: CMakeLists.txt  sift_keypoint.cpp
python/: mnist_view.py  python_opencv_practice1.py  sample_draw_with_tkinter.py  test_cvxopt.py  test_matplotlib.py  test_tkinter.py  test_vtk.py  view_cornell_grasp_dataset.py
python/openni-python/: openni_python_connect_test.py  openni_python_process_test.py
ros/beginner_tutorials/: package.xml
ros/my_beginner_tutorials/: CMakeLists.txt  package.xml
ros/my_beginner_tutorials/scripts/: fibonacci_client.py  fibonacci_server.py
svm/: svm_classifier.py  test_data2d.py
tf/: rotate_tf.py
