<?xml version="1.0"?>
<package>
  <name>opt_benchmark</name>
  <description>
    optimization benchmark
  </description>
  <version>0.1.15</version>
  <maintainer email="murooka@jsk.t.u-tokyo.ac.jp">Masaki Murooka</maintainer>
  <license>Apache License 2.0</license>
  <export> </export>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>eigen</build_depend>

  <run_depend>eigen</run_depend>
</package>
